tests/negative/neg_try_send_use_after_move.safe
-- Test: neg_try_send_use_after_move
-- Description: Access-typed channel elements are rejected before try_send ownership checks run.
-- Expected: REJECT source_frontend_error

package neg_Try_Send_Use_After_Move

   type payload is record
      value : integer;


   type payload_Ptr is access payload;

   channel Data_Ch : payload_Ptr capacity 1;

   function run
      Source  : payload_Ptr = new ((value = 1) as payload);
      success : boolean = False;

      try_send Data_Ch, Source, success;
      Source.value = 2;



